tests/custom/STARIS_2022/operation-type-errors/pred-type-error/stderr.expected
Error:
    Parser error in file: pred-type-error.essence Error is:
ValidatorError pred-type-error.essence:2:20:
  |
2 | such that b = pred([false, true, false])
  |                    ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"int enum or bool"
	Got: matrix indexed by [int] of bool

